k8/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-service-deployment
  labels:
    app: job-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: job-service
  template:
    metadata:
      labels:
        app: job-service
    spec:
      containers:
        - name: job-service
          image: 876708361421.dkr.ecr.ap-southeast-1.amazonaws.com/job-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
