k8/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-service-service
spec:
  selector:
    app: job-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
